package be.intecbrussel.linguacards.entity;

public enum ReviewRating {
    AGAIN,
    HARD,
    GOOD,
    EASY
}