@startuml
hide circle
skinparam classAttributeIconSize 0

class User {
  +id: Long
  +email: String
  +passwordHash: String
}

class Deck {
  +id: Long
  +name: String
  +languageCode: String
  +isPrivate: boolean
}

class Card {
  +id: Long
  +term: String
  +definition: String
  +example: String?
  +cefr: String?
  +tags: String?
  +nextReviewAt: Instant?
  +lastReviewedAt: Instant?
  +intervalDays: int
}

class ReviewLog {
  +id: Long
  +rating: ReviewRating
  +reviewedAt: Instant
}

enum ReviewRating {
  AGAIN
  HARD
  GOOD
  EASY
}

User "1" -- "0..*" Deck : owns >
Deck "1" -- "0..*" Card : contains >
Card "1" -- "0..*" ReviewLog : records >
ReviewLog --> ReviewRating

note right of Card
  new: nextReviewAt is null
  due: nextReviewAt <= now
  scheduled: nextReviewAt > now
end note

@enduml
